# ChronoTrace

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nightly.yml
benchmarks/: RESULTS.md  bench_compression.py  bench_dedup.py  bench_delta.py  bench_events.py  bench_grid.py  bench_index.py  bench_keyframe_interval.py  bench_reconstruct.py  bench_scope.py  bench_stepping.py  bench_store_read.py  bench_store_write.py
docs/: architecture.md  configuration.md  format-spec.md  how-it-works.md  queries.md
docs/adr/: 0000-template.md  0001-recording-strategy.md  0002-frame-registry.md  0003-dedup-correctness.md  0004-chrono-file-format.md  0005-storage-defaults.md  0006-reconstruction.md  0007-halfway-review.md  0008-index-schema.md  README.md
examples/: buggy_pipeline.py  exceptions.py  generators.py  loops.py  pipeline_realistic.py  simple.py
spikes/: README.md  RESULTS-capture.md  RESULTS-overhead.md  bench_overhead.py  hostile.py  spike_capture.py  workloads.py
src/chronotrace/: __init__.py  _version.py  cli.py  config.py  repl.py
src/chronotrace/index/: __init__.py  call_tree.py  db.py  density.py  exceptions.py  indexer.py  line_hits.py  schema.py  var_writes.py
src/chronotrace/query/: __init__.py  _ast_reads.py  _resolve.py  breakpoints.py  call_tree.py  exception_origin.py  expr.py  last_write.py  line_hits.py  provenance.py  registry.py  types.py  var_writes.py  watch.py
src/chronotrace/reconstruct/: __init__.py  _replay.py  oracle.py  reconstructor.py  resolve.py  stepping.py  types.py
src/chronotrace/recorder/: __init__.py  capture.py  dedup.py  events.py  frames.py  identity.py  interning.py  recorder.py  redact.py  scope.py  sink.py  values.py
src/chronotrace/store/: __init__.py  columnar.py  compression.py  constants.py  delta.py  errors.py  framing.py  keyframe.py  reader.py  recovery.py  strings.py  valuepool.py  writer.py
tests/: test_architecture.py  test_config.py  test_integration_recorder.py  test_repl.py  test_smoke.py  test_spike_capture.py  test_spike_harness.py
tests/equivalence/: README.md  __init__.py  compare.py  minimise.py  test_equivalence.py  truth.py
tests/fixtures/: hostile.py  programs.py
tests/index/: conftest.py  test_call_tree.py  test_density.py  test_exceptions.py  test_indexer.py  test_line_hits.py  test_schema.py  test_var_writes.py
tests/property/: README.md  __init__.py  program_gen.py  syntax.py  test_layers.py  test_pipeline.py
tests/query/: conftest.py  test_ast_reads.py  test_breakpoints.py  test_exception_origin.py  test_expr.py  test_expr_security.py  test_line_hits.py  test_provenance.py  test_registry.py  test_types.py  test_var_writes.py
tests/reconstruct/: conftest.py  test_differential.py  test_reconstructor.py  test_stepping.py  test_types.py
tests/recorder/: conftest.py  invariants.py  test_capture.py  test_dedup.py  test_events.py  test_exceptions.py  test_generators.py  test_identity.py  test_interning.py  test_recorder.py  test_redact.py  test_scope.py  test_scope_filter.py
tests/store/: _recording_target.py  test_columnar.py  test_compression.py  test_constants.py  test_crash_real.py  test_delta.py  test_framing.py  test_fuzz_reader.py  test_keyframe.py  test_reader.py  test_reader_hostile.py  test_recovery.py  test_strings.py  test_valuepool.py  test_writer.py
