[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chronotrace"
dynamic = ["version"]
description = "A time-travel debugger for Python: record execution once, then scrub backward through it."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dharmppp21", email = "daddugaming16@gmail.com" }]
keywords = [
    "debugger",
    "time-travel-debugging",
    "reverse-debugging",
    "sys-monitoring",
    "pep-669",
    "developer-tools",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]

# Kept minimal on purpose, and paid for by measurement, not reputation.
#
# The recorder is imported INTO the process being debugged, so every dependency
# we take becomes a dependency of the user's program: another entry in their
# sys.modules, another version to conflict with theirs, another package the
# scope filter must exclude from recording, and more startup cost they pay.
# A debugger that cannot attach to a project because of a version clash in
# ITS OWN dependency tree is a debugger nobody keeps installed.
#
# The two below are imported only by the `store` layer, never by the recorder
# (the architecture test enforces that recording stays import-clean), so a user
# who only records still pays nothing at import time.
#   zstandard -- block compression. Chosen over stdlib zlib/lzma on day-14
#     measurements (benchmarks/RESULTS.md): ~3x zlib's ratio on event blocks and
#     ~25x lzma's compress speed, which the recorder hot path needs. Not
#     hand-rolled: a compression codec is exactly the thing to take off the shelf.
#   msgpack -- the value pool's on-disk encoding. Compact, cross-language, and
#     (unlike pickle, banned at the format level) a pure data codec that constructs
#     no objects when opening a stranger's recording.
# Phase 5 adds fastapi + uvicorn behind an optional [ui] extra (day 33) precisely
# so recording stays lean for users who only record.
dependencies = [
    "zstandard>=0.22",
    "msgpack>=1.0",
]

[project.urls]
Homepage = "https://github.com/dharmppp21/ChronoTrace"
Issues = "https://github.com/dharmppp21/ChronoTrace/issues"

# The recorder is stdlib-only, so the console script adds no runtime dependency.
[project.scripts]
chronotrace = "chronotrace.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
    "mypy>=1.14",
    "hypothesis>=6",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

# Single source of truth for the version. Phase 7 (day 45) asserts that the
# git tag matches this value; that check is only meaningful while the two are
# independent, which is why we do not derive the version from tags.
[tool.hatch.version]
path = "src/chronotrace/_version.py"

# Naming the package explicitly makes it structurally impossible to ship
# tests/, spikes/ or benchmarks/ in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/chronotrace"]

[tool.hatch.build.targets.sdist]
include = ["src/chronotrace", "tests", "docs", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Lint + format (ruff is both; there is exactly one formatter in this project)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort: deterministic import order => diffs show logic, not churn
    "UP",      # pyupgrade: we are >=3.12; no legacy syntax should survive review
    "B",       # bugbear: catches mutable-default-arg, which is literally one of
               #   the bug classes our own demo program (day 10) is built around
    "SIM",     # simplify
    "C4",      # comprehensions
    "PTH",     # pathlib over os.path: dev is Windows, CI is three OSes, and
               #   string path munging is how cross-platform bugs get in
    "RUF",     # ruff-specific correctness rules
    "S",       # security: this project bans eval (day 30) and pickle (day 11).
               #   Let the linter enforce those bans from commit one.
    "T20",     # no stray print(): a print in the recorder hot path is a real
               #   perf bug, and print-debugging is the thing we are replacing
    "D",       # docstrings must exist; their content standard is in CONTRIBUTING
]
# ANN (flake8-annotations) is deliberately NOT enabled: mypy --strict already
# rejects unannotated defs. Two tools enforcing one rule is duplicated logic.
ignore = [
    "D203",  # conflicts with D211 (we use "no blank line before class docstring")
    "D213",  # conflicts with D212 (we use "summary on first line")
    # D105/D107 would demand docstrings on __init__ and dunders. On the classes we
    # write those are trivial (`return len(self._values)`), so the docstring could
    # only restate the signature -- which CONTRIBUTING.md bans outright ("comments
    # explain why, never what"). The class docstring carries the contract; that is
    # the place a reader looks. Non-trivial dunders still get one; nothing stops
    # them.
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Asserts ARE the test; docstrings on every test function are noise.
"tests/**" = ["S101", "D"]

# examples/ are demo programs whose LINE NUMBERS are asserted by the golden test in
# tests/recorder/test_recorder.py. Adding a docstring to `double(n)` would say
# "doubles n" (noise) and shift every line below it, breaking the test for no gain.
"examples/**" = ["D103", "T20"]

# Benchmarks are measurement scripts, not library code: print IS their output, and
# the reasoning lives in module docstrings and benchmarks/RESULTS.md rather than on
# each throwaway variant class. Same rationale as spikes/ below, different lifetime
# -- these are kept and re-run (day 43 consolidates them), so correctness rules
# still apply in full.
"benchmarks/**" = ["T20", "D101", "D102", "D103"]

# Spikes are throwaway by design (see spikes/README.md). They get a lighter
# standard because their deliverable is a RESULTS-*.md file, not code that
# anyone maintains -- holding a benchmark harness to library standards spends
# effort on something we intend to delete.
#
# The relaxations are narrow and each has a reason:
#   T20   -- print IS the harness's output mechanism
#   S603/S607 -- it shells out to itself deliberately, for process isolation
#   D102/D103/D105/D107 -- module and CLASS docstrings still required, because
#            those carry the reasoning. Per-method and __init__ docstrings on
#            fixture classes would be noise ("initialises the object").
#
# Note what is NOT relaxed: correctness rules (F, B, E) still apply. A spike may
# be scrappy; it may not be wrong, because we are about to bet the architecture
# on its output.
"spikes/**" = ["T20", "S603", "S607", "D102", "D103", "D105", "D107"]

# ---------------------------------------------------------------------------
# Types
# ---------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/chronotrace", "tests"]

# Beyond --strict, and worth the noise for a project whose correctness story is
# its selling point:
warn_unreachable = true
enable_error_code = ["redundant-expr", "possibly-undefined", "truthy-bool"]

# NOTE: ignore_missing_imports is intentionally NOT set globally. Silencing every
# unresolved import hides real mistakes. When a dependency genuinely ships no
# stubs, add a narrow per-module override here and say why.

# msgpack ships no py.typed and no bundled stubs (zstandard does, so it needs no
# override). Narrowly silenced here rather than globally; the store wraps it in
# valuepool.py, whose own signatures stay fully typed.
[[tool.mypy.overrides]]
module = ["msgpack"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
# `dev` is the local default: 100 examples, a few seconds. CI overrides it with `ci`
# (fast, per push) and the nightly workflow with `nightly` (3,000 examples). The profiles
# themselves live in tests/property/conftest.py, because Hypothesis registers them in
# code -- this only chooses which one an unadorned `pytest` gets.
addopts = "-q --strict-markers --strict-config --hypothesis-profile=dev"

# ---------------------------------------------------------------------------
# ChronoTrace's own recording config (documented; see docs/configuration.md)
# ---------------------------------------------------------------------------
# A user's project sets this to tune scope and redaction without code changes.
# CLI flags override env vars override this table override the defaults. Left
# commented here because these ARE the defaults; uncomment to customise.
#
# [tool.chronotrace]
# include = ["*/vendored_lib/*"]   # record into a dependency you are debugging
# exclude = ["*/migrations/*"]     # never record generated code
# redact  = ["*password*", "*token*", "*secret*", "*api_key*", "*auth*"]
# capture_values = true
